# boyan_detector_bot

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  Settings.toml  build.rs  log4rs.toml  rustfmt.toml
imagedb/: Cargo.toml
imagedb/src/: lib.rs
imagedb/tests/: test.rs
src/: contract.rs  main.rs  telegram_client.rs
