[package]
name = "boyan_detector_bot"
version = "0.1.0"
authors = ["Psilon <pzixel@gmail.com>"]
build = "build.rs"

[dependencies]
bytes = "0.4.8"
clap = "2.32.0"
failure = "0.1.1"
futures = "0.1.21"
hyper = "0.12.3"
hyper-tls = "0.3.0"
log = "0.4.2"
log4rs = { version = "0.8.0", features = ["toml_format"] }
serde = "1.0.67"
serde_derive = "1.0.67"
serde_json = "1.0.22"
sha2 = "0.7.1"
tokio = "0.1.7"
imagedb = { path = "imagedb" }
