[package]
name = "boyan_detector_bot"
version = "0.2.0"
authors = ["Psilon <pzixel@gmail.com>"]
build = "build.rs"

[dependencies]
bytes = "0.4.11"
clap = "2.32.0"
failure = "0.1.3"
futures = "0.1.25"
hyper = "0.12.16"
hyper-tls = "0.3.1"
log = "0.4.6"
log4rs = { version = "0.8.1", features = ["toml_format"] }
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
tokio = "0.1.13"
imagedb = { path = "imagedb" }

[profile.release]
lto = true
