[package]
name = "boyan_detector_bot"
version = "0.2.0"
authors = ["Psilon <pzixel@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
bytes = "0.4.11"
clap = "2.32.0"
failure = "0.1.5"
futures = "0.1.25"
hyper = "0.12.23"
hyper-tls = "0.3.1"
log = "0.4.6"
log4rs = { version = "0.8.1", features = ["toml_format"] }
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
tokio = { version = "0.1.15", features = ["async-await-preview"] }
imagedb = { path = "imagedb" }
tokio-async-await = "0.1.5"
